2005-06-14  Mark Wielaard  <mark@klomp.org>

	* javax/swing/JComponent.java (setMinimumSize): Only adjust
	prefferedSize or maximumSize when they are set.
	* javax/swing/JScrollPane.java (JScrollPane(Component,int,int)):
	Set viewport and view manually.

2005-06-14  Tom Tromey  <tromey@redhat.com>

	* m4/acinclude.m4 (--with-vm-classes): New option.
	* lib/gen-classlist.sh.in: Handle 'vm_classes' feature.
	* lib/Makefile.am (compile_classpath): Updated for new
	classpath-setting approach.
	(noinst_DATA): Now unconditional.

2005-06-14  Ziga Mahkovec  <ziga.mahkovec@klika.si>

	* gnu/java/awt/peer/gtk/GdkGraphics2D.java (updateBufferedImage):
	Fixed pixelBuffer array index.

2005-06-14  Ziga Mahkovec  <ziga.mahkovec@klika.si>

	Classpath bug #13353:
	* gnu/java/net/protocol/jar/Handler.java (parseURL, toExternalForm):
	Append fragments (#ref) to URLs.

2005-06-14  Mark Wielaard  <mark@klomp.org>

	* javax/swing/text/InternationalFormatter.java (clone): Disabled.

2005-06-14  David Gilbert  <david.gilbert@object-refinery.com>

	* java/text/DecimalFormat.java
	(DecimalFormat(String, DecimalFormatSymbols)): store clone of symbols;
	(equals): add missing checks;
	(getDecimalFormatSymbols): return clone of symbols;
	(setDecimalFormatSymbols): store clone of symbols.
	
2005-06-14  Mark Wielaard  <mark@klomp.org>

	* lib/standard.omit: Add gnu/classpath/jdwp.
	
2005-06-13  Keith Seitz  <keiths@redhat.com>

	* gnu/classpath/jdwp/id/ArrayId.java: New file.
	* gnu/classpath/jdwp/id/ArrayReferenceTypeId.java: New file.
	* gnu/classpath/jdwp/id/ClassLoaderId.java: New file.
	* gnu/classpath/jdwp/id/ClassObjectId.java: New file.
	* gnu/classpath/jdwp/id/ClassReferenceTypeId.java: New file.
	* gnu/classpath/jdwp/id/InterfaceReferenceTypeId.java: New file.
	* gnu/classpath/jdwp/id/JdwpId.java: New file.
	* gnu/classpath/jdwp/id/ObjectId.java: New file.
	* gnu/classpath/jdwp/id/ReferenceTypeId.java: New file.
	* gnu/classpath/jdwp/id/StringId.java: New file.