@@ -98,7 +98,7 @@ $(top_builddir)/java/util/LocaleData.java: $(top_srcdir)/scripts/generate-locale
 	$(top_srcdir)/scripts/generate-locale-list.sh > $(top_builddir)/java/util/LocaleData.java
 
 genclasses: gen-classlist.sh standard.omit $(top_builddir)/java/util/LocaleData.java gen-xpath-parser
-	top_builddir=$(top_builddir) $(SHELL) ./gen-classlist.sh standard
+	top_builddir=$(top_builddir) top_srcdir=$(top_srcdir) $(SHELL) ./gen-classlist.sh standard
 
 # Only rebuild parsers when explicitly asked to.
 if REGEN_PARSERS
