@@ -2,6 +2,8 @@ New in release 0.16
 
 * GdkGraphics2D has been updated to use Cairo 0.5.0 APIs.
 * Better GTK scrollbar peer implementation requiring GTK 2.6 or higher.
+* New --with-vm-classes configure option, and new 'build' setting
+  for --with-glibj
 
 Runtime interface changes:
 
